# FiveCityNews

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  Диаграмма без названия.drawio
src/: .env.template
src/app/: create_fastapi_app.py  main.py  run_main.py
src/app/api/: dependencies.py
src/app/api/auth/: __init__.py  login.py  logout.py
src/app/api/v1/: __init__.py  post.py  rate_limit.py  tasks.py  tier.py  user.py
src/app/core/: __init__.py  config.py  logger.py
src/app/core/auth/: dependencies.py  helpers.py  validation.py
src/app/core/db/: db_helper.py  session_maker.py
src/app/core/gunicorn/: logger.py
src/app/core/utils/: auth_utils.py  caching.py  queue.py  rate_limit.py
src/app/core/worker/: functions.py  settings.py
src/app/crud/: crud_posts.py  crud_rate_limits.py  crud_tiers.py  crud_token_blacklist.py  crud_users.py
src/app/models/: __init__.py  base.py  mixins.py  post.py  rate_limit.py  tier.py  token_blacklist.py  user.py
src/app/schemas/: mixins.py  post.py  rate_limit.py  tier.py  token_blacklist.py  user.py
src/migrations/: env.py
src/migrations/versions/: 2025_01_09_1645-474a0d38407a_create_users_table.py  2025_01_09_1702-7d5960b5d58a_update_users_table.py
src/scripts/: create_first_superuser.py  create_first_tier.py
